# openarm_skills

./: CMakeLists.txt  README.md  package.xml
action/: HandWater.action  PickPlace.action
config/: skills.yaml
include/openarm_skills/: error_codes.hpp
launch/: remote_viewer.launch.py  skills.launch.py
scripts/: sim_viewer.sh  test_openarm_skills.sh
src/: skill_server_node.cpp
srv/: CarryAction.srv  DetectGraspPose.srv  GotoHome.srv  Gripper.srv  Stop.srv  StringCommand.srv
